policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - dev
                - stage
                - prod
      validate:
        message: "Using ':latest' image tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
