policies/kyverno/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Images must come from project Artifact Registry."
        pattern:
          spec:
            containers:
              - image: "europe-west1-docker.pkg.dev/msgb-bt-7-2026/*"
